# mylittlengsolve

./: .gitignore  CMakeLists.txt  Makefile  README.rst  all_in_one.cpp  coupling.pde  demo_coupling.cpp  demo_coupling_adv.cpp  demo_instat.cpp  demo_nonlinear.cpp  demo_stokes.cpp  instat.pde  linhyp.pde  linhypDG.cpp  linhypDG_par.cpp  myAssembling.cpp  myCoefficient.hpp  myCoefficient.py  myDiffop.hpp  myElement.cpp  myElement.hpp  myFESpace.cpp  myFESpace.hpp  myHOElement.cpp  myHOElement.hpp  myHOFESpace.cpp  myHOFESpace.hpp  myIntegrator.cpp  myIntegrator.hpp  myPreconditioner.cpp  ngs.ini  nonlinear.pde  periodic.cpp  periodic.pde  simple.pde  simple.py  stokes.pde
1_Basic/: CMakeLists.txt  README.rst  basic.rst  myngspy.cpp  pythonExport.rst
1_Basic/1-1_myFEM/: myElement.cpp  myFESpace.hpp
1_Basic/1-2_myHOFEM/: myHOElement.cpp
1_Basic/1-3_only_c++/: CMakeLists.txt
1_Basic/1_myFEM/: coefficient.rst  diffop.rst  element.rst  fespace.rst  integrator.rst  integrators.rst  myCoefficient.cpp  myCoefficient.hpp  myCoefficient.py  myDiffOp.hpp  myElement.cpp  myElement.hpp  myFESpace.cpp  myFESpace.hpp  myIntegrate.hpp  myIntegrator.cpp  myIntegrator.hpp  myPreconditioner.cpp  myPreconditioner.hpp  shapetester.py  simple.py  timings.py
1_Basic/2_myHOFEM/: hofem.rst  myHOElement.cpp  myHOElement.hpp  myHOFESpace.cpp  myHOFESpace.hpp  shapetester.py  simple_ho.py
1_Basic/3_only_c++/: CMakeLists.txt  all_in_one.cpp
1_Basic/4_utility_functions/: assembling.py  coupling.py  demo_coupling.cpp  myAssembling.cpp  utility_functions.hpp
1_Basic/5_Performance_improvements/: matrix_vs_flatmatrix.hpp  matrix_vs_flatmatrix.py
2_Advanced/: README.rst  advanced.rst
2_Advanced/HDG/: CMakeLists.txt  HDGLaplace.cpp  Makefile
2_Advanced/equilibrate/: CMakeLists.txt  equilibrate.cpp  equilibrate.py  equilibrate_simple.cpp  test.py
2_Advanced/linhyp/: CMakeLists.txt  linhyp.py  linhypDG.cpp
2_Advanced/mixed/: CMakeLists.txt  hybridmixed.cpp  hybridmixed.pde  mixed_diffusion.cpp
2_Advanced/ngs-mech/: README
2_Advanced/ngs-mech/largestrain/: Makefile  mechsolve.hpp  nonlinelast.cpp  nonlinmech_integrator.cpp
2_Advanced/ngs-mech/largestrain/demos/: balken.geo  balken.vol  nonlinelast.pde
2_Advanced/ngs-mech/multibody/: mbs.cpp  mbs.hpp  pendel_constraint.geo  pendel_constraint.pde  pendel_constraint.vol  slider_constraint.geo  slider_constraint.pde  slider_constraint.vol
2_Advanced/ngs-mech/plasticity/: Makefile  lshape.in2d  lshape.vol  plasticity.pde  plasticity_simple.cpp  probe.in2d  probe.vol
2_Advanced/periodic/: CMakeLists.txt  periodic.cpp  periodic.geo  periodic.pde
2_Advanced/precond/: CMakeLists.txt  asm_precond.cpp
3_Legacy/: demo_nonlinear.cpp  simple.pde
3_Legacy/standalone/: CMakeLists.txt  Makefile  demo_solve.cpp
3_Legacy/tcl/: CMakeLists.txt
HDG/: CMakeLists.txt  HDGElasticity.cpp  HDGElasticity.pde  HDGLaplace.cpp  Makefile  pipe.geo  plate.geo
bla/: CMakeLists.txt  matvec.cpp  timing.cpp
equilibrate/: CMakeLists.txt  equilibrate.cpp  equilibrate.py  test.py
mixed/: CMakeLists.txt  Makefile  hybridmixed.cpp  hybridmixed.pde  mixed_diffusion.cpp
precond/: CMakeLists.txt
python/: CMakeLists.txt  Makefile  myngspy.cpp
standalone/: CMakeLists.txt  Makefile  demo_bla.cpp  demo_comp.cpp
tcl/: CMakeLists.txt
tests/: CMakeLists.txt  CTestConfig.cmake  coupling.pde.appx  linhyp.pde.appx
tests/HDG/: CMakeLists.txt
tests/mixed/: CMakeLists.txt
tests/precond/: CMakeLists.txt
tests/python/: CMakeLists.txt
tests/standalone/: CMakeLists.txt
tests/tcl/: CMakeLists.txt
windows/: HDG.vcxproj  equilibrate.vcxproj  libmyngspy.vcxproj  mixed.vcproj  mixed.vcxproj  my_little_ngsolve.sln  my_little_ngsolve.vcproj  my_little_ngsolve.vcxproj  postBuild_my_little_ngsolve.bat  precond.vcproj  precond.vcxproj  tcldemo.vcproj  tcldemo.vcxproj
